# Voom-Logistics_Optimization

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Makefile  README.md
ci/github/workflows/: ci.yml  docker.yml  security.yml
cpp/: CMakeLists.txt
cpp/bench/: CMakeLists.txt  bench_astar.cpp
cpp/common/include/voom/common/: graph.hpp  lockfree_ring.hpp
cpp/demand/include/voom/demand/: balancer.hpp
cpp/demand/src/: balancer.cpp
cpp/eta/include/voom/eta/: eta_core.hpp
cpp/eta/src/: eta_core.cpp
cpp/route_opt/include/voom/route_opt/: astar.hpp  dijkstra.hpp
cpp/route_opt/src/: dijkstra.cpp
cpp/server/: CMakeLists.txt  optimizer_service.cc  optimizer_service.hpp  optimizer_service_main.cc
cpp/sim/include/voom/sim/: sim_engine.hpp
cpp/sim/src/: sim_engine.cpp
cpp/tests/: CMakeLists.txt  test_astar.cpp
cpp/vrp/include/voom/vrp/: vrp_solver.hpp
cpp/vrp/src/: vrp_solver.cpp
deploy/compose/: docker-compose.yml
deploy/docker/: base.Dockerfile  cpp.Dockerfile  go.Dockerfile  python.Dockerfile  scala.Dockerfile
deploy/k8s/base/: assignment-deploy.yaml  assignment-svc.yaml  gateway-deploy.yaml  gateway-svc.yaml  hpa-gateway.yaml  hpa-optimizer.yaml  kustomization.yaml  ml-eta-deploy.yaml  ml-eta-svc.yaml  namespace.yaml  optimizer-deploy.yaml  optimizer-svc.yaml  prometheus-scrape.yaml
docs/: ARCHITECTURE.md  CONTRIBUTING.md  DATASETS.md  RUNBOOK.md  STYLE.md
go/gateway/: go.mod  main.go
go/gateway/handlers/: http.go
go/gateway/metrics/: metrics.go
proto/: optimizer.proto
python/ml_eta/: pyproject.toml  requirements.txt
python/ml_eta/ml_eta/: service.py  train.py
python/ml_eta/tests/: test_smoke.py
scala/assignment-service/: build.sbt
scripts/: gen_synthetic_data.py  run_benchmarks.sh
(+4 files in other folders)
